--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ repository = "https://github.com/kotauskas/bigbit.rs"
 documentation = "https://docs.rs/bigbit/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+default = ["clippy"]
+clippy = []
