--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ documentation = "https://docs.rs/bigbit/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["clippy"]
+default = ["clippy", "std"]
 clippy = []
+std = []
