--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "bigbit"
-version = "0.0.7"
+version = "0.0.8"
 authors = ["Kotauskas <v.toncharov@gmail.com>"]
 edition = "2018"
-description = "Implements the BigBig format, allowing for compact storage of arbitrarily large numbers."
+description = "Implements the BigBit format, allowing for compact storage of arbitrarily large numbers."
 readme = "README.md"
 license = "Zlib"
 keywords = ["bigbit", "bytebit", "bignum", "gmp", "num"]
