--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,12 @@ documentation = "https://docs.rs/bigbit/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.num-traits]
+version = "0.2"
+optional = true
+
 [features]
-default = ["clippy", "std"]
-clippy = []
+default = ["num_traits", "std", "clippy"]
+num_traits = ["num-traits"]
 std = []
+clippy = []
